Fix css causing some extra padding to appear around map spat. cov. div

--- a/src/sass/modules/search_results/_search_results_common.scss
+++ b/src/sass/modules/search_results/_search_results_common.scss
@@ -24,6 +24,12 @@
   word-wrap: break-word;
 }
 
+// This will prevent extra padding in the spatial
+// coverage div
+.result-item .spatial-coverage {
+  word-wrap: normal;
+}
+
 .results-text {
   padding-bottom: 7px;
   width: 100%;
